fix job experiance alignments

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -27,6 +27,7 @@ section.contact {
 
 footer {
     background-color: #f5f5f5;
+    padding: 2.5rem 0;
 }
 
 .footer {
