--- a/scss/pages/_experiance.scss
+++ b/scss/pages/_experiance.scss
@@ -1,8 +1,5 @@
 .experiance {
     background-color: $white;
-    h3 {
-        margin-left: 4rem;
-    }
     &__jobs-list {
         display: flex;
     }
@@ -32,11 +29,11 @@
             display: flex;
             flex-direction: column;
             margin-bottom: 1rem;
-            font-size: 1rem;
+            // font-size: 1rem;
             &--title {
-                font-weight: 500;
-                font-size: 1rem;
+                font-size: 1.25rem;
                 display: block;
+                font-weight: 500;
             }
             &--company {
                 display: block;
@@ -45,12 +42,20 @@
                 display: block;
             }
         }
+        &__body {
+            margin-left: 1rem;
+        }
         &--description {
             text-align: justify;
             margin-top: 1rem;
             ul {
                 margin: 0;
                 padding-left: .95rem;
+                li {
+                    line-height: 1.3;
+                    letter-spacing: normal;
+                    margin: .35rem 0;
+                }
             }
         }
         &--icon {
@@ -58,10 +63,33 @@
             width: 4rem;
             object-fit: cover;
         }
+        &__stack {
+            // font-weight: 500;
+        }
     }
     &--blank-space {
         display: block;
         height: 268px;
         width: 448px;
+    }
+}
+
+// queries
+@include media-breakpoint-down(xs) {
+    .experiance {
+        &__time-line {
+            display: none;
+        }
+        &__job {
+            margin: 2rem 0;
+            font-size: 14px;
+        }
+        &__jobs-list {
+            display: flex;
+            flex-direction: column;
+        }
+        &--blank-space {
+            display: none;
+        }
     }
 }
