--- a/scss/pages/_skills.scss
+++ b/scss/pages/_skills.scss
@@ -1,11 +1,16 @@
 .skills {
     &__technologies {
+        padding: 0;
+        margin: 0;
+        list-style: none;
         display: flex;
-        justify-content: space-evenly;
-        margin: 4rem 0 0 0;
-        &--tool>img {
-            width: 6rem;
-            object-fit: cover;
+        flex-wrap: wrap;
+        &--tool {
+            img {
+                width: 100%;
+                object-fit: cover;
+                padding: 1rem;
+            }
         }
     }
 }
